--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.4.0",
     "pinia": "^2.1.6",
     "primeflex": "^3.3.1",
