Логика восстановления пароля

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -16,5 +16,11 @@
     "Audience": "https://localhost:7161",
     "TokenValidityInMinutes": "60"
   },
+  "SmtpSettings": {
+    "Server": "smtp-pulse.com",
+    "Port": 2525,
+    "Username": "sh.paltushev@alatau-clinic.kz",
+    "Password": "sXHMnbgF5ZTqXe"
+  },
   "AllowedHosts": "*"
 }
