тестово поменял время жизни токена

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -14,7 +14,8 @@
     "Secret": "4cxp+J6znTzjPw7gXlHHJbmP5Y0qDyNZ06b9ICrpdRc=",
     "Issuer": "https://localhost:7161",
     "Audience": "https://localhost:7161",
-    "TokenValidityInMinutes": "60"
+    "TokenValidityInMinutes": "1",
+    "RefreshTokenValidityInDays":  "1"
   },
   "SmtpSettings": {
     "Server": "smtp-pulse.com",
