--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -15,7 +15,7 @@
     "Issuer": "https://localhost:7161",
     "Audience": "https://localhost:7161",
     "TokenValidityInMinutes": "1",
-    "RefreshTokenValidityInDays":  "1"
+    "RefreshTokenValidityInDays": "1"
   },
   "SmtpSettings": {
     "Server": "smtp-pulse.com",
@@ -23,5 +23,6 @@
     "Username": "sh.paltushev@alatau-clinic.kz",
     "Password": "sXHMnbgF5ZTqXe"
   },
+  "AppUrl": "http://localhost:5178",
   "AllowedHosts": "*"
 }
