отправка ссылки восстановления пароля

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -23,6 +23,6 @@
     "Username": "sh.paltushev@alatau-clinic.kz",
     "Password": "sXHMnbgF5ZTqXe"
   },
-  "AppUrl": "http://localhost:5178",
+  "AppUrl": "http://161.97.110.154:3000",
   "AllowedHosts": "*"
 }
