Добавил комментарии для swagger

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -10,10 +10,9 @@
     }
   },
   "Jwt": {
-    "Expire": 1,
     "Secret": "4cxp+J6znTzjPw7gXlHHJbmP5Y0qDyNZ06b9ICrpdRc=",
-    "Issuer": "https://localhost:7161",
-    "Audience": "https://localhost:7161",
+    "Issuer": "http://161.97.110.154:5000",
+    "Audience": "http://161.97.110.154:3000",
     "TokenValidityInMinutes": "1",
     "RefreshTokenValidityInDays": "1"
   },
