--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=mydatabase;User Id=postgres;Password=Shah1234"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=sitebase;User Id=postgres;Password=Shah1234"
   },
   "Logging": {
     "LogLevel": {
